apps/gitops/dev/gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-ingress
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hubble
  namespace: cilium-ingress
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.69.100.1
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn
  namespace: cilium-ingress
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.69.100.2
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argo
  namespace: cilium-ingress
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.69.100.3
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
