apps/gitops/dev/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: hubble
      namespace: cilium-ingress
      sectionName: http
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-cd
  namespace: argo-cd
spec:
  parentRefs:
    - name: argo
      namespace: cilium-ingress
      sectionName: http
  rules:
    - backendRefs:
        - name: argo-cd-argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: longhorn
      namespace: cilium-ingress
      sectionName: http
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
